--- a/pt-BR/mail/chrome/messenger/addressbook/addressBook.properties
+++ b/pt-BR/mail/chrome/messenger/addressbook/addressBook.properties
@@ -116,6 +116,8 @@ prefixCc=Cc
 prefixBcc=Cco
 addressBook=Catálogo de endereços
 
+browsePhoto=Foto do contato
+
 # mailnews.js
 ldap_2.servers.pab.description=Catálogo pessoal
 ldap_2.servers.history.description=Contatos coletados
