--- a/pt-BR/mail/chrome/messenger/filter.properties
+++ b/pt-BR/mail/chrome/messenger/filter.properties
@@ -6,6 +6,7 @@ cannotHaveDuplicateFilterTitle=Nome duplicado do filtro
 cannotHaveDuplicateFilterMessage=O nome fornecido já existe. Por favor, forneça um nome diferente para o filtro.
 deleteFilterConfirmation=Tem certeza que deseja excluir o(s) filtro(s) selecionado(s)?
 untitledFilterName=Novo filtro
+matchAllFilterName=Todas as mensagens
 filterListBackUpMsg=Seus filtros não funcionam porque o arquivo msgFilterRules.dat, que contém seus filtros, não pôde ser lido. Um novo msgFilterRules.dat será criado e uma cópia do arquivo atual, renomeado rulesbackup.dat, será criada na mesma pasta.
 customHeaderOverflow=Você excedeu o limite de 50 cabeçalhos personalizados. Por favor, exclua um ou mais cabeçalhos personalizados e tente de novo.
 filterCustomHeaderOverflow=Seus filtros excederam o limite de 50 cabeçalhos personalizados. Por favor, edite o arquivo msgFilterRules.dat, que contém seus filtros, para usar menos cabeçalhos personalizados.
@@ -17,8 +18,8 @@ stopButtonLabel=Parar
 continueButtonLabel=Continuar
 cannotEnableFilter=Este filtro provavelmente foi criado por uma versão posterior do Mozilla/Netscape. Não é possivel ativar este filtro porque esta versão não sabe como aplicá-lo.
 dontWarnAboutDeleteCheckbox=Não perguntar de novo
-searchTermsInvalidTitle=Search Terms Invalid
-searchTermsInvalidMessage=This filter cannot be saved because some search terms are invalid in the current context.
+searchTermsInvalidTitle=Termos de pesquisa inválidos
+searchTermsInvalidMessage=Este filtro não pôde ser salvo porque alguns termos de pesquisa são inválidos no contexto atual.
 
 # for junk mail logging / mail filter logging
 # LOCALIZATION NOTE(junkLogDetectStr)
@@ -33,7 +34,7 @@ logCopyStr=mensagem copiada id = %1$S para %2$S
 # LOCALIZATION NOTE(filterLogDetectStr)
 # %1$S=filter name %2$S=author, %3$S=subject, %4$S=date
 filterLogDetectStr=Aplicado filtro “%1$S” na mensagem de %2$S - %3$S em %4$S
-filterMissingCustomAction=Missing Custom Action
+filterMissingCustomAction=Ação personalizada ausente
 filterAction2=prioridade alterada
 filterAction3=excluída
 filterAction4=marcada como lida
@@ -51,3 +52,8 @@ filterAction15=texto da mensagem recebido do servidor POP3
 filterAction16=copiada para pasta
 filterAction17=aplicada tag
 filterAction18=ignored subthread
+# LOCALIZATION NOTE(filterAutoNameStr)
+# %1$S=Header or item to match, e.g. "From", "Tag", "Age in days", etc.
+# %2$S=Operator, e.g. "Contains", "is", "is greater than", etc.
+# %3$S=Value, e.g. "Steve Jobs", "Important", "42", etc.
+filterAutoNameStr=“%1$S” %2$S “%3$S”
