--- a/pt-BR/mail/chrome/messenger/localMsgs.properties
+++ b/pt-BR/mail/chrome/messenger/localMsgs.properties
@@ -39,14 +39,21 @@
 # The following are used by the local mail code to display progress/status/error messages
 #
 
+pop3EnterPasswordPromptTitle=Forneça a senha
+
+# LOCALIZATION NOTE(pop3EnterPasswordPrompt): Do not translate the words "%1$S"
+# and "%2$S" below. Place the word %1$S where the user name should appear, and
+# %2$S where the host name should appear.
+pop3EnterPasswordPrompt=Forneça a senha para %1$S em %2$S:
+
+# LOCALIZATION NOTE(pop3PreviouslyEnteredPasswordIsInvalidPrompt): Do not
+# translate the words "%1$S" and "%2$S" below. Place the word %1$S where the
+# user name should appear, and %2$S where the host name should appear.
+pop3PreviouslyEnteredPasswordIsInvalidPrompt=Por favor, forneça a nova senha para o usuário %1$S em %2$S:
+
 ## @name MK_POP3_OUT_OF_DISK_SPACE
 ## @loc None
 -321=Não há espaço em disco suficiente para receber novas mensagens. Experimente remover mensagens antigas, esvaziar a lixeira e condensar as pastas e então tente de novo.
-
-# Out of memory
-## @name LOCAL_OUT_OF_MEMORY
-## @loc None
--1000=O aplicativo está sem memória.
 
 # Status - parsing folder
 ## @name LOCAL_STATUS_SELECTING_MAILBOX
@@ -137,30 +144,6 @@
 # LOCALIZATION NOTE(4016): Do not translate the word "POP3" below.
 4016=O comando DELE não foi bem-sucedido. Erro ao marcar a mensagem como excluída.
 
-## @name POP3_ENTER_PASSWORD_PROMPT
-## @loc None
-# LOCALIZATION NOTE(4016): Do not translate the word "%1$s@%2$s" below.
-# Place the word "%1$s" and "%2$s" where email account name should appear (i.e. john.smith@example.org)
-4017=Forneça a senha para %1$s em %2$s:
-
-## @name POP3_PREVIOUSLY_ENTERED_PASSWORD_IS_INVALID_ETC
-## @loc None
-# LOCALIZATION NOTE(4016): Do not translate the word "%s" below. It will receive the message returned by the server.
-# Do not translate "%.100s" and "%.100s". It will receive the email account name.
-4018=Forneça a nova senha para o usuário “%.100s” em %.100s:
-
-## @name POP3_NO_ANSWER
-## @loc None
-4019=Sem resposta
-
-## @name POP3_ENTER_PASSWORD_PROMPT_TITLE
-## @loc None
-4020=Forneça a senha
-
-## @name POP3_FOLDER_FOR_TRASH
-## @loc None
-4023=A lixeira já continha uma pasta de nome “%s”. A pasta que você acabou de excluir pode ser encontrada na lixeira com o nome “%s”.
-
 # Status - stat failed
 ## @name POP3_STAT
 ## @loc None
@@ -169,10 +152,6 @@
 ## @name POP3_SERVER_SAID
 ## @loc None
 4025= A resposta do servidor %S foi:\n
-
-## @name DELETING_MSGS_STATUS
-## @loc None
-4026=Excluindo %S/%S mensagens
 
 ## @name COPYING_MSGS_STATUS
 ## @loc None
@@ -191,10 +170,6 @@
 ## @name CANNOT_PROCESS_SECURE_AUTH
 ## @loc None
 4030=O servidor de mensagens não suporta autenticação segura.
-
-## @name MOVEMAIL_SPOOL_FILE_LOCKED
-## @loc None
-4032=O arquivo spool de mail %S está travado.
 
 ## @name MOVEMAIL_CANT_OPEN_SPOOL_FILE
 ## @loc None
