--- a/pt-BR/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/pt-BR/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -155,15 +155,6 @@
 ## @name NS_MSG_LARGE_MESSAGE_WARNING
 12541=Alerta! Você vai enviar uma mensagem de %d bytes. Deseja fazer isso?
 
-## @name NS_SMTP_PASSWORD_PROMPT1
-12543=Forneça a senha para %S:
-
-## @name NS_SMTP_PASSWORD_PROMPT2
-12544=Forneça a senha para %S em %S:
-
-## @name NS_SMTP_CONNECTING_TO_SERVER
-12545=Conectando-se ao servidor…
-
 ## @name NS_MSG_SENDING_MESSAGE
 12550=Enviando mensagem…
 
@@ -236,9 +227,6 @@
 
 ## @name NS_ERROR_SMTP_PASSWORD_UNDEFINED
 12584=Houve um erro ao enviar mensagens. Não foi possível obter a senha de %S. A mensagem não foi enviada.
-
-## @name NS_SMTP_PASSWORD_PROMPT_TITLE
-12585=Forneça a senha do servidor SMTP
 
 ## @name NS_ERROR_SMTP_TEMP_SIZE_EXCEEDED
 12586=O tamanho da mensagem que você quer enviar excede um limite temporário do servidor. A mensagem não foi enviada. Experimente reduzir o tamanho da mensagem ou aguarde um pouco e tente de novo.\nResposta do servidor: “%s”.
@@ -338,8 +326,27 @@ renameAttachmentMessage=Novo nome do anexo:
 ## LOCALIZATION NOTE (mail.compose.attachment_reminder_keywords): comma separated
 ##   words that that should trigger an attachment reminder.
 mail.compose.attachment_reminder_keywords=.doc,.pdf,anexo,anexar,anexado,anexada,anexados,anexadas
+
+addAttachmentButton=Adicionar anexo…
+addAttachmentButton.accessskey=r
+remindLaterButton=Lembrar depois
+remindLaterButton.accessskey=L
+
 attachmentReminderTitle=Lembrete de anexos
 attachmentReminderMsg=Você esqueceu de adicionar um anexo?
+# LOCALIZATION NOTE (attachmentReminderKeywordsMsgs): Semi-colon list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 number of keywords
+attachmentReminderKeywordsMsgs=Detectada uma palavra-chave de anexo:;Detectadas #1 palavras-chave de anexo:
+attachmentReminderOptionsMsg=As palavras do lembrete de anexos podem ser configuradas nas preferências
 attachmentReminderYesIForgot=Sim, eu esqueci!
 attachmentReminderFalseAlarm=Não, enviar agora
 
+## LOCALIZATION NOTE(smtpEnterPasswordPrompt): Do not translate the
+## word $S. Place the word $S where the host name should appear.
+smtpEnterPasswordPrompt=Forneça a senha para %S:
+## LOCALIZATION NOTE(smtpEnterPasswordPromptWithUsername): Do not translate the
+## words %1$S and %2$S. Place the word %1$S where the host name should appear,
+## and %2$S where the user name should appear.
+smtpEnterPasswordPromptWithUsername=Forneça a senha de %2$S para %1$S:
+smtpEnterPasswordPromptTitle=Forneça a senha do servidor SMTP
