--- a/pt-BR/mail/chrome/messenger/preferences/preferences.properties
+++ b/pt-BR/mail/chrome/messenger/preferences/preferences.properties
@@ -30,16 +30,28 @@ useOtherApp=Abrir com…
 fpTitleChooseApp=Selecionar aplicativo
 manageApp=Detalhes do aplicativo…
 alwaysAsk=Perguntar
+delete=Excluir ação
+confirmDeleteTitle=Excluir ação
+confirmDeleteText=Tem certeza que deseja excluir esta ação?
 
 # LOCALIZATION NOTE (usePluginIn):
 # %1$S = plugin name (for example "QuickTime Plugin-in 7.2")
 # %2$S = brandShortName from brand.properties (for example "Shredder")
 usePluginIn=Abrir com o %1$S (no %2$S)
 
-# LOCALIZATION NOTE (typeDescriptionWithType):
+# LOCALIZATION NOTE (typeDescriptionWithDetails):
 # %1$S = type description (for example "Portable Document Format")
-# %2$S = type (for example "application/pdf")
-typeDescriptionWithType=%1$S (%2$S)
+# %2$S = details (see below, for example "(application/pdf: .pdf, .pdfx)")
+typeDescriptionWithDetails=%1$S %2$S
+
+# LOCALIZATION NOTE (typeDetailsWithTypeOrExt):
+# %1$S = type or extensions (for example "application/pdf", or ".pdf, .pdfx")
+typeDetailsWithTypeOrExt=(%1$S)
+
+# LOCALIZATION NOTE (typeDetailsWithTypeAndExt):
+# %1$S = type (for example "application/pdf")
+# %2$S = extensions (for example ".pdf, .pdfx")
+typeDetailsWithTypeAndExt=(%1$S: %2$S)
 
 #### Sound Notifications
 soundFilePickerTitle=Selecionar um som
@@ -53,3 +65,25 @@ attachmentReminderAddDialogTitle=Adicionar palavra-chave
 attachmentReminderAddText=Palavra-chave:
 attachmentReminderEditDialogTitle=Editar palavra-chave
 attachmentReminderEditText=Palavra-chave:
+
+#### Cookies
+cookiepermissionstitle=Exceções - Cookies
+cookiepermissionstext=Especifique os sites que podem ou não usar cookies. Forneça o endereço exato e clique em “Bloquear”, “Excluir ao sair” ou “Permitir”.
+invalidURI=Por favor, forneça um nome de servidor válido
+invalidURITitle=Nome de servidor inválido
+
+#### Cookie Viewer
+hostColon=Servidor:
+domainColon=Domínio:
+forSecureOnly=somente em conexões criptografadas
+forAnyConnection=em todos os tipos de conexão
+AtEndOfSession=até sair do aplicativo
+can=Permitir
+canSession=Excluir ao sair
+cannot=Bloquear
+noCookieSelected=<nenhum cookie selecionado>
+cookiesAll=Estes cookies estão armazenados no seu computador:
+cookiesFiltered=Estes cookies satisfazem a sua pesquisa:
+removeCookies=Excluir cookies
+removeCookie=Excluir cookie
+
