--- a/pt-BR/mail/chrome/messenger/search-attributes.properties
+++ b/pt-BR/mail/chrome/messenger/search-attributes.properties
@@ -9,7 +9,7 @@ Status=Status
 To=Para
 Cc=Cc
 ToOrCc=Para ou Cc
-AgeInDays=Age In Days
+AgeInDays=Tempo em dias
 SizeKB=Tamanho (KB)
 Tags=Tags
 # for AB and LDAP
@@ -38,4 +38,4 @@ AttachmentStatus=Attachment Status
 JunkStatus=Junk Status
 Label=Label
 Customize=Personalizar…
-MissingCustomTerm=Missing Custom Term
+MissingCustomTerm=Termo personalizado ausente
