--- a/sk/mail/chrome/messenger-newsblog/newsblog.properties
+++ b/sk/mail/chrome/messenger-newsblog/newsblog.properties
@@ -33,3 +33,6 @@ newsblog-feedNotValidTitle=Neplatný kanál
 ## LOCALIZATION NOTE(newsblog-feedNotValid): %S is the feed URL
 newsblog-feedNotValid=%S nie je platným informačným kanálom.
 newsblog-getNewMsgsCheck=Zisťujú sa nové príspevky informačného kanálu…
+
+## LOCALIZATION NOTE(feeds-accountname): This string should be the same as feeds.accountName in am-newsblog.dtd
+feeds-accountname=Blogy a informačné kanály
