--- a/sk/mail/chrome/messenger/accountCreation.properties
+++ b/sk/mail/chrome/messenger/accountCreation.properties
@@ -1,10 +1,9 @@
 # accountCreation.properties
 
-# LOCALIZATION NOTE: %1$S will be the name of the app (i.e. ThunderBird), %2$S will be the hostname of the server the user was trying to connect to.
-incoming_cleartext_warning=Nastavili ste %1$S tak, aby sa pripájal k serveru pre prichádzajúcu poštu %2$S, ktorý nie je zabezpečeným serverom.
-incoming_selfsigned_warning=Nastavili ste %1$S tak, aby sa cez zabezpečené pripojenie pripájal k serveru pre prichádzajúcu poštu %2$S. Nemôžeme však potvrdiť, že pripojenie je zabezpečené.
-outgoing_cleartext_warning=Nastavili ste %1$S tak, aby sa pripájal k serveru pre odchádzajúcu poštu %2$S, ktorý nie je zabezpečeným serverom.
-outgoing_selfsigned_warning=Nastavili ste %1$S tak, aby sa cez zabezpečené pripojenie pripájal k serveru pre odchádzajúcu poštu %2$S. Nemôžeme však potvrdiť, že pripojenie je zabezpečené.
+# LOCALIZATION NOTE(cleartext_warning): %1$S will be the hostname of the server the user was trying to connect to.
+cleartext_warning=Server %1$S nepoužíva šifrovanie.
+# LOCALIZATION NOTE(selfsigned_warning): %1$S will be the hostname of the server the user was trying to connect to.
+selfsigned_warning=Server %1$S nepoužíva dôveryhodný certifikát.
 selfsigned_details=Za normálnych okolností sa zabezpečený poštový server identifikuje dôveryhodným certifikátom, ktorý zaručí pravosť servera. Pripojenie k tomuto poštovému serveru bude šifrované, ale nemôžeme zaručiť pravosť servera.
 cleartext_details=Nezabezpečené poštové servery nepoužívajú šifrované pripojenia na ochranu hesiel a súkromných informácií. Pri pripojení k tomuto serveru je možné vaše heslo a citlivé údaje prečítať treťou stranou.
 
@@ -12,10 +11,13 @@ cleartext_details=Nezabezpečené poštové servery nepoužívajú šifrované p
 default_server_tag= (predvolený)
 
 # config titles
-searching_for_configs=Vyhľadáva sa…
+# LOCALIZATION NOTE(looking_up_settings): %1$S will be the brandShortName.
+looking_up_settings=%1$S vyhľadáva nastavenia pre váš poštový účet.
 manually_edit_config=Úprava konfigurácie
-finished_with_success=Dokončené
-finished_with_error=Chyba
+# LOCALIZATION NOTE(found_settings): %1$S will be the brandShortName.
+found_settings=%1$S našiel nastavenia pre váš poštový účet.
+# LOCALIZATION NOTE(failed_to_find_settings): %1$S will be the brandShortName.
+failed_to_find_settings=%1$Su sa nepodarilo nájsť nastavenia pre váš poštový účet.
 
 # config subtitles
 check_preconfig=kontrola predkonfigurácie…
@@ -47,6 +49,5 @@ no_encryption=Bez zabezpečenia
 ssl_tls=SSL/TLS
 starttls=STARTTLS
 
-name.error=Zadajte vaše meno, ktoré sa bude zobrazovať vašim adresátom.
-email.error=Overte túto e-mailovú adresu!
-password.error=Prihlásenie nebolo úspešné. Skontrolujte používateľské meno a heslo.
+please_enter_name=Zadajte vaše meno
+double_check_email=Skontrolujte túto e-mailovú adresu!
