--- a/sk/mail/chrome/messenger/preferences/preferences.properties
+++ b/sk/mail/chrome/messenger/preferences/preferences.properties
@@ -30,16 +30,28 @@ useOtherApp=Použiť inú…
 fpTitleChooseApp=Výber pomocnej aplikácie
 manageApp=Podrobnosti o aplikácii…
 alwaysAsk=Vždy sa opýtať
+delete=Odstrániť akciu
+confirmDeleteTitle=Odstránenie akcie
+confirmDeleteText=Naozaj chcete odstrániť túto akciu?
 
 # LOCALIZATION NOTE (usePluginIn):
 # %1$S = plugin name (for example "QuickTime Plugin-in 7.2")
 # %2$S = brandShortName from brand.properties (for example "Shredder")
 usePluginIn=Použiť %S (v aplikácii %S)
 
-# LOCALIZATION NOTE (typeDescriptionWithType):
+# LOCALIZATION NOTE (typeDescriptionWithDetails):
 # %1$S = type description (for example "Portable Document Format")
-# %2$S = type (for example "application/pdf")
-typeDescriptionWithType=%1$S (%2$S)
+# %2$S = details (see below, for example "(application/pdf: .pdf, .pdfx)")
+typeDescriptionWithDetails=%1$S %2$S
+
+# LOCALIZATION NOTE (typeDetailsWithTypeOrExt):
+# %1$S = type or extensions (for example "application/pdf", or ".pdf, .pdfx")
+typeDetailsWithTypeOrExt=(%1$S)
+
+# LOCALIZATION NOTE (typeDetailsWithTypeAndExt):
+# %1$S = type (for example "application/pdf")
+# %2$S = extensions (for example ".pdf, .pdfx")
+typeDetailsWithTypeAndExt=(%1$S: %2$S)
 
 #### Sound Notifications
 soundFilePickerTitle=Vyberte zvuk
@@ -53,3 +65,24 @@ attachmentReminderAddDialogTitle=Pridať kľúčové slovo
 attachmentReminderAddText=Kľúčové slovo:
 attachmentReminderEditDialogTitle=Upraviť kľúčové slovo
 attachmentReminderEditText=Kľúčové slovo:
+
+#### Cookies
+cookiepermissionstitle=Výnimky – Cookies
+cookiepermissionstext=Na tomto mieste môžete určiť, ktoré servery môžu alebo nemôžu využívať cookie. Zadajte presnú adresu servera, potom kliknite na tlačidlo Zakázať, Povoliť pre reláciu alebo Povoliť.
+invalidURI=Zadajte platný názov servera
+invalidURITitle=Zadaný neplatný názov servera
+
+#### Cookie Viewer
+hostColon=Server:
+domainColon=Doména:
+forSecureOnly=Iba zašifrované pripojenia
+forAnyConnection=Všetky typy pripojenia
+AtEndOfSession=Na konci relácie
+can=Povoliť
+canSession=Povoliť pre reláciu
+cannot=Zakázať
+noCookieSelected=<nie je vybrané žiadne cookie>
+cookiesAll=V počítači sú uložené tieto cookies:
+cookiesFiltered=Tieto cookies vyhovujú vášmu hľadaniu:
+removeCookies=Odstrániť cookies
+removeCookie=Odstrániť cookie
