--- a/pl/mail/chrome/messenger/glodaFacetView.properties
+++ b/pl/mail/chrome/messenger/glodaFacetView.properties
@@ -63,8 +63,9 @@ glodaFacetView.facets.filter.attachmentTypes.allLabel = Dowolny typ
 glodaFacetView.result.message.fromLabel = od:
 glodaFacetView.result.message.toLabel   = do:
 
-glodaFacetView.results.message.countLabel = Wyświetlanie #1 wiadomości z #3 ogółem
-glodaFacetView.results.message.countLabelMessagePlurals=
+glodaFacetView.results.message.countLabel.topMessages = #1 wiadomość;#1 wiadomości;#1 wiadomości
+glodaFacetView.results.message.countLabel.outOf       = z #1 ogółem;z #1 ogółem;z #1 ogółem
+glodaFacetView.results.message.countLabel.grouping    = #1 #2
 
 glodaFacetView.results.message.showAllInList.label   = Wyświetl wszystkie jako listę w nowej karcie
 glodaFacetView.results.message.showAllInList.tooltip = Wyświetli listę wszystkich aktualnie wyświetlanych wiadomości w nowej karcie (obecna karta zostanie zamknięta)
