--- a/fr/mail/chrome/messenger/news.properties
+++ b/fr/mail/chrome/messenger/news.properties
@@ -54,11 +54,10 @@ enterPasswordTitle=Mot de passe du serveur de groupes
 okButtonText=Téléchargement
 
 noNewMessages=Il n'y a pas de nouveaux messages sur le serveur.
-downloadingHeaders=Téléchargement de %S en-têtes sur %S en-têtes
-downloadingFilterHeaders=Récupération des en-têtes pour les filtres : %S (%S/%S)
+newNewsgroupHeaders=Téléchargement de %S en-têtes sur %S depuis %S
+newNewsgroupFilteringHeaders=Récupération des en-têtes pour les filtres : %S (%S/%S) depuis %S
 downloadingArticles=Téléchargement des articles %S-%S
 bytesReceived=Téléchargement du groupe : %S reçus (%SKo lu à %SKo/s)
-checkingForNewNews=Vérification du groupe : %S sur %S à partir de %S pour les nouveaux messages
 downloadingArticlesForOffline=Téléchargement des articles %S-%S dans %S
 
 onlyCancelOneMessage=Vous ne pouvez annuler qu'un message à la fois.
