--- a/pl/mail/chrome/messenger/glodaFacetView.properties
+++ b/pl/mail/chrome/messenger/glodaFacetView.properties
@@ -48,7 +48,7 @@ glodaFacetView.constraints.query.initial        = Wyszukiwanie wiadomości
 glodaFacetView.constraints.query.involves.label = zawierających #1
 glodaFacetView.constraints.query.tagged.label   = z etykietami:
 
-glodaFacetView.facets.mode.top.moreLabel = Wyświetl wszystkie #1 wiadomości
+glodaFacetView.facets.mode.top.listAllLabel = Wyświetl wszystkie #1 wiadomości;Wyświetl wszystkie #1 wiadomości;Wyświetl wszystkie #1 wiadomości
 
 # FIXME: dotłumaczyć (po sprawdzeniu w ui)
 glodaFacetView.facets.included.fallbackLabel=including any of:
