--- a/nl/mail/chrome/messenger/activity.properties
+++ b/nl/mail/chrome/messenger/activity.properties
@@ -46,7 +46,7 @@ autosyncContextDisplayText=%S synchronizeren
 
 # Message actions that show up in activity manager
 # LOCALIZATION NOTE (deletedMessages2): #1 number of messages, #2 folder name
-deletedMessages2=#1 bericht verwijdert uit #2;#1 berichten verwijdert uit #2
+deletedMessages2=#1 bericht verwijderd uit #2;#1 berichten verwijderd uit #2
 
 # LOCALIZATION NOTE (movedMessages): #1 number of messages, #2 and #3: folder names
 movedMessages=#1 bericht verplaatst van #2 naar #3;#1 berichten verplaatst van #2 naar #3
@@ -55,7 +55,7 @@ copiedMessages=#1 bericht gekopieerd van #2 naar #3;#1 berichten gekopieerd van 
 # LOCALIZATION NOTE (fromServerToServer): #1 source server, #2 destination server
 fromServerToServer=van #1 naar #2
 # LOCALIZATION NOTE (deletedFolder): #1 folder name
-deletedFolder=map #1 verwijdert
+deletedFolder=map #1 verwijderd
 # LOCALIZATION NOTE (movedFolder): #1 and #2 are folder names
 movedFolder=map #1 verplaatst naar map #2
 # LOCALIZATION NOTE (copiedFolder): #1 and #2 are folder names
