--- a/nl/mail/chrome/messenger/news.properties
+++ b/nl/mail/chrome/messenger/news.properties
@@ -54,11 +54,10 @@ enterPasswordTitle=Nieuwsserverwachtwoord vereist
 okButtonText=Downloaden
 
 noNewMessages=Er zijn geen nieuwe berichten op de server.
-downloadingHeaders=Downloaden van berichtkop %S van %S
-downloadingFilterHeaders=Verkrijgen van berichtkoppen voor filters: %S (%S/%S)
+newNewsgroupHeaders=Downloaden van berichtkop %S van %S voor %S
+newNewsgroupFilteringHeaders==Verkrijgen van berichtkoppen voor filters: %S (%S/%S) op %S
 downloadingArticles=Downloaden van artikelen %S-%S
 bytesReceived=Nieuwsgroepen downloaden: %S ontvangen (%SKB gelezen met %SKB/sec)
-checkingForNewNews=Controleren van nieuwsgroep %S van %S op %S op nieuwe berichten
 downloadingArticlesForOffline=Downloaden van artikelen %S-%S in %S
 
 onlyCancelOneMessage=U kunt maar één artikel per keer annuleren.
