--- a/pl/mail/chrome/messenger/glodaFacetView.properties
+++ b/pl/mail/chrome/messenger/glodaFacetView.properties
@@ -63,6 +63,8 @@ glodaFacetView.facets.filter.attachmentTypes.allLabel = Dowolny typ
 glodaFacetView.result.message.fromLabel = od:
 glodaFacetView.result.message.toLabel   = do:
 
+glodaFacetView.result.message.noSubject = (brak tematu)
+
 glodaFacetView.results.message.countLabel.topMessages = #1 wiadomość;#1 wiadomości;#1 wiadomości
 glodaFacetView.results.message.countLabel.outOf       = z #1 ogółem;z #1 ogółem;z #1 ogółem
 glodaFacetView.results.message.countLabel.grouping    = #1 #2
