--- a/pl/mail/chrome/messenger/quickSearch.properties
+++ b/pl/mail/chrome/messenger/quickSearch.properties
@@ -1,5 +1,4 @@
 # FIXME: sprawdzić w ui (wszystko)
-searchEverywhere.label         = Szukaj wszędzie
 searchSubject.label            = Filtrowanie tematów
 searchFrom.label               = Filtrowanie nadawców
 searchFromOrSubject.label      = Filtrowanie tematów lub nadawców
@@ -7,3 +6,4 @@ searchRecipient.label          = Filtrowanie adresatów lub adresatów kopii
 searchRecipientOrSubject.label = Filtrowanie tematów, adresatów lub adresatów kopii
 searchMsgBody.label            = Filtrowanie treści wiadomości
 saveAsVirtualFolder.label      = Zapisz jako folder wyszukiwania
+searchSubjectFromOrRecipient.label = Temat, nadawca lub odbiorca wiadomości
